# kmambo.github.io

./: .gitignore  _config.yaml  antora-playbook.yaml  antora-playbook.yml  antora.yml  index.adoc  index.html
.github/workflows/: blank.yml  publish.yml
crd-maker/: Makefile  PROJECT  README.md  go.mod
crd-maker/api/v1alpha1/: groupversion_info.go  task_types.go  workflow_types.go  zz_generated.deepcopy.go
crd-maker/cmd/: main.go
crd-maker/config/crd/: kustomization.yaml
crd-maker/config/default/: kustomization.yaml
crd-maker/config/manager/: manager.yaml
crd-maker/config/prometheus/: monitor.yaml
crd-maker/config/rbac/: auth_proxy_client_clusterrole.yaml  auth_proxy_role.yaml  auth_proxy_role_binding.yaml  auth_proxy_service.yaml  leader_election_role.yaml  leader_election_role_binding.yaml  role.yaml  role_binding.yaml  service_account.yaml  task_editor_role.yaml  task_viewer_role.yaml  webhook_rbac.yaml  workflow_editor_role.yaml  workflow_viewer_role.yaml
crd-maker/config/samples/: _v1alpha1_filter_task.yaml  _v1alpha1_task.yaml  (+2 more)
crd-maker/hack/: boilerplate.go.txt
docs/: antora.yml
kmambo-operator/: .dockerignore  Dockerfile  Makefile  pyproject.toml  requirements.txt
kmambo-operator/kmambo-operator-chart/: Chart.yaml  values.yaml
kmambo-operator/kmambo-operator-chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
kmambo-operator/kmambo-operator-chart/templates/tests/: test-connection.yaml
kmambo-operator/src/kmambo/: task_controller.py
modules/kmambo/: index.adoc
(+7 files in other folders)
