[tool.poetry]
name = "kmambo"
version = "0.1.0"
description = ""
authors = ["Partho Bhowmick <p.s.bhowmick@gmail.com>"]
readme = "README.md"
packages = [{include = "kmambo", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
kopf = "^1.36.2"
pyyaml = "^6.0.1"
uvloop = "^0.19.0"
pydantic = "^2.5.3"
kubernetes = "^28.1.0"


[tool.poetry.group.dev.dependencies]
cython = "^3.0.7"
wheel = "^0.42.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
